demos/3-demo/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service-test-without-route
  labels:
    addRoute: "false"
spec:
  ports:
  - name: app-http
    port: 80
    protocol: TCP
